fix design and days overlap

--- a/src/GusReactCalendar/styles.scss
+++ b/src/GusReactCalendar/styles.scss
@@ -1,6 +1,8 @@
 @import './theme.scss';
 .month-container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
   .day-row, .header-row {
     width: 100%;
     display: flex;
