--- a/src/GusReactCalendar/theme.scss
+++ b/src/GusReactCalendar/theme.scss
@@ -3,9 +3,10 @@ $cell-height: 20px;
 .calendar-cell {
   height: $cell-height;
   position: relative;
-  border: 1px solid rgba(15, 15, 15, 0.2);
+  border: 1px solid rgba(15, 15, 15, 0.1);
   width: 100%;
   flex:1;
+  z-index: 1;
   &.no-border {
     border: none;
   }
